--- a/iterator/.gitignore
+++ b/iterator/.gitignore
@@ -397,3 +397,13 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Extra
+/bin/
+/obj/
+/[Dd]ebug/
+/[Rr]elease/
+**/bin/
+**/obj/
+**/[Dd]ebug/
+**/[Rr]elease/
